<resources>
    <string name="app_name">手心</string>
    <string name="start">开始使用</string>
    <string name="welcome_text">Welcome</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="username_input_hint">在此输入账号</string>
    <string name="password_input_hint">在此输入密码</string>
    <string name="signin">Sign in</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_hint">新用户?点击这里注册</string>

    <!--this label for register-->
    <string name="register_name">邮箱</string>
    <string name="register_password">密码</string>
    <string name="ensure_password">确认密码</string>
    <string name="photo_selection">选择头像</string>
    <string name="register">立即注册</string>
    <string name="have_account">已有帐号?点击登录</string>

    <!--this label for login-->
    <string name="input_username">请输入账号</string>
    <string name="input_password">请输入密码</string>

    <!--this label for mode choice-->
    <string name="photo">手语识别</string>
    <string name="video">采集数据</string>

    <!-- this label for take photo-->
    <string name="takePhoto">Take Photo</string>
    <string name="sendFile">识别结果</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <!-- this label for take trainset-->
    <string name="initOrder">尚未开始拍摄</string>
    <string name="stop">停止</string>
    <string name="pause">暂停</string>
    <string name="begin">开始</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="tips">请保持手部位于方框区域内</string>

    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">主页</string>
    <string name="title_study">教学</string>
    <string name="title_recognition">识别</string>
    <string name="title_personpage">个人</string>

    <!-- this label for take toolbar-->
    <string name="toolbar_menu_back">返回</string>
    <string name="toolbar_menu_favorite">收藏</string>
    <string name="toolbar_menu_share">分享</string>
    <string name="toolbar_menu_search">搜索</string>


    <string name="groupFold">fold</string>
    <string name="groupExpended">expended</string>

    <!-- this label for single word activity-->
    <string name="word_name">名称:%s</string>
    <string name="word_description">描述:%s</string>
</resources>
